@@ -7,12 +7,6 @@ mutagen.id3 needs:
  * Polish padding - perhaps make it client selectable
  * Better cross-compatibility tests with eyeD3.
 
-mutagen.oggvorbis needs:
- * Repagination support.
-
-mutagen.oggflac needs:
- * To exist.
-
 mutagen.mp4 needs:
  * To exist.
  * Clean MP4 metadata reader at
