@@ -2,6 +2,7 @@ import os
 from tests import TestCase, add
 from mutagen import File
 from mutagen.oggvorbis import OggVorbis
+from mutagen.oggflac import OggFLAC
 from mutagen.mp3 import MP3
 from mutagen.apev2 import APEv2File
 from mutagen.flac import FLAC
@@ -16,6 +17,10 @@ class TFile(TestCase):
     def test_oggvorbis(self):
         self.failUnless(isinstance(
             File(os.path.join("tests", "data", "empty.ogg")), OggVorbis))
+
+    def test_oggflac(self):
+        self.failUnless(isinstance(
+            File(os.path.join("tests", "data", "empty.oggflac")), OggFLAC))
 
     def test_mp3(self):
         self.failUnless(isinstance(
